# YouChat-Pro

./: CMakeLists.txt  README.md  ch.md  config.json  dump.rdb
client/: CMakeLists.txt  main.cpp
client/src/client/: client.cpp  client.h
client/src/request/: BroadcastReq.cpp  BroadcastReq.h  FetchListReq.h  PrivateReq.cpp  PrivateReq.h  RegistrationReq.cpp  RegistrationReq.h  RequestBase.cpp  RequestBase.h  request.h
client/src/response/: BroadcastRes.cpp  BroadcastRes.h  FetchListRes.cpp  FetchListRes.h  PrivateRes.cpp  PrivateRes.h  RegistrationRes.cpp  RegistrationRes.h  ReponseBase.cpp  ResponseBase.h  response.h
clientTests/: broadcast.py  broadcastload.py  fetchlist.py  private.py  privateload.py  server.py  signin.py  signup.py  test.py
design/: draft.txt  msgtypes.txt
doc/: note.md
server/: CMakeLists.txt  main.cpp
server/dbapi/: CMakeLists.txt  test.cpp
server/dbapi/include/dbapi/: dbapi.h  redisapi.h
server/dbapi/src/: dbapi.cpp  mydb.cpp  redisapi.cpp
server/include/: configfileloader.h  dbapi.h  entity.h  epoll.h  mydb.h  myutil.h  redisapi.h  server.h  threadpool.h
server/include/request/: broadcastreq.h  fetchlistreq.h  fetchunreadreq.h  privateloadreq.h  privatereq.h  request.h  signupreq.h
server/include/response/: broadcastloadres.h  broadcastres.h  deniedres.h  fetchlistres.h  response.h  responsebase.h  signinres.h  signupres.h
server/myepoll/: CMakeLists.txt  epoll.cpp
server/request/: CMakeLists.txt
server/request/include/request/: broadcastloadreq.h  requestbase.h  signinreq.h
server/request/src/: broadcastloadreq.cpp
server/response/: CMakeLists.txt
server/response/include/response/: fetchunreadres.h  privateloadres.h  privateres.h
server/response/src/: deniedres.cpp  fetchlistres.cpp  privateres.cpp  responsebase.cpp  signinres.cpp  signupres.cpp
server/server/: CMakeLists.txt
server/server/include/: clientconn.h  configfileloader.h  server.h
server/server/src/: myutil.cpp  server.cpp
server/src/: clientconn.cpp  configfileload.cpp  dbapi.cpp  mydb.cpp  redisapi.cpp  server.cpp  threadpool.cpp
server/src/request/: broadcastreq.cpp  fetchlistreq.cpp  fetchunreadreq.cpp  privateloadreq.cpp  privatereq.cpp  requestreq.cpp  signinreq.cpp  signupreq.cpp
server/src/response/: broadcastloadres.cpp  broadcastres.cpp  fetchunreadres.cpp  privateloadres.cpp
server/threadpool/: CMakeLists.txt
sql/: create.sql
tests/: CMakeLists.txt  test.cpp
tests/tests/: apitest.cpp  dbtest.cpp  mmsql.cpp  stringformat.cpp  template.cpp
